force-app/main/default/objects/Product_Schedule__c/Product_Schedule__c.object-meta.xml
<CustomObject>
    <label>Product Schedule</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>