force-app/main/default/objects/Product_Schedule__c/fields/One_Time_Price__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Price__c</fullName>
    <formula>Product__r.One_Time_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Time Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>