force-app/main/default/objects/Product_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product is not live on web. Please select different product.</errorMessage>
        <filterItems>
            <field>Product2.Live_On_Web__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage></infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Schedules</relationshipLabel>
    <relationshipName>Product_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>