force-app/main/default/objects/Product_Schedule__c/fields/Sustainer_Price__c.field-meta.xml
<CustomField>
    <fullName>Sustainer_Price__c</fullName>
    <formula>Product__r.Sustainer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sustainer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>