force-app/main/default/objects/Product_Schedule__c/validationRules/Prevent_promoting_products_invalid_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_promoting_products_invalid_date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c || End_Date__c  &lt; Today()  ||  VALUE(Fiscal_Year__c)  &lt; YEAR (TODAY())</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please select valid date</errorMessage>
</ValidationRule>