force-app/main/default/objects/Product_Schedule__c/validationRules/Year_is_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_is_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(ISNUMBER(Fiscal_Year__c)), VALUE(Fiscal_Year__c)&lt;2010 )</errorConditionFormula>
    <errorDisplayField>Fiscal_Year__c</errorDisplayField>
    <errorMessage>Enter a 4 digit year > 2010</errorMessage>
</ValidationRule>