force-app/main/default/objects/Product_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>One_Time_Price__c</columns>
    <columns>Sustainer_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>