force-app/main/default/objects/Product_Schedule__c/listViews/By_Quarter.listView-meta.xml
<ListView>
    <fullName>By_Quarter</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>One_Time_Price__c</columns>
    <columns>Sustainer_Price__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>By Quarter</label>
</ListView>